// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEmptyScreen renders correctly with visualize paragraph 1`] = `
<DashboardEmptyScreen
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  onLinkClick={[MockFunction]}
  showLinkToVisualize={true}
>
  <I18nProvider>
    <IntlProvider
      defaultLocale="en"
      formats={
        Object {
          "date": Object {
            "full": Object {
              "day": "numeric",
              "month": "long",
              "weekday": "long",
              "year": "numeric",
            },
            "long": Object {
              "day": "numeric",
              "month": "long",
              "year": "numeric",
            },
            "medium": Object {
              "day": "numeric",
              "month": "short",
              "year": "numeric",
            },
            "short": Object {
              "day": "numeric",
              "month": "numeric",
              "year": "2-digit",
            },
          },
          "number": Object {
            "currency": Object {
              "style": "currency",
            },
            "percent": Object {
              "style": "percent",
            },
          },
          "relative": Object {
            "days": Object {
              "units": "day",
            },
            "hours": Object {
              "units": "hour",
            },
            "minutes": Object {
              "units": "minute",
            },
            "months": Object {
              "units": "month",
            },
            "seconds": Object {
              "units": "second",
            },
            "years": Object {
              "units": "year",
            },
          },
          "time": Object {
            "full": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
              "timeZoneName": "short",
            },
            "long": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
              "timeZoneName": "short",
            },
            "medium": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
            },
            "short": Object {
              "hour": "numeric",
              "minute": "numeric",
            },
          },
        }
      }
      locale="en"
      messages={Object {}}
      textComponent={Symbol(react.fragment)}
    >
      <PseudoLocaleWrapper>
        <EuiIcon
          color="subdued"
          size="xxl"
          type="dashboardApp"
        >
          <EuiIconEmpty
            className="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon--app euiIcon-isLoading"
            focusable="false"
            style={null}
          >
            <svg
              className="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon--app euiIcon-isLoading"
              focusable="false"
              height={16}
              style={null}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            />
          </EuiIconEmpty>
        </EuiIcon>
        <h2>
          This dashboard is empty. Let’s fill it up!
        </h2>
        <p>
          <EuiI18n
            defaults={
              Array [
                "Click the ",
                " button in the menu bar above to add a visualization to the dashboard.",
                "Add",
                "Add visualization",
              ]
            }
            tokens={
              Array [
                "kbn.dashboard.addVisualizationDescription1",
                "kbn.dashboard.addVisualizationDescription2",
                "kbn.dashboard.addVisualizationLinkText",
                "kbn.dashboard.addVisualizationLinkAriaLabel",
              ]
            }
          >
            <span>
              Click the 
              <EuiLink
                aria-label="Add visualization"
                data-test-subj="emptyDashboardAddPanelButton"
                onClick={[MockFunction]}
              >
                <button
                  aria-label="Add visualization"
                  className="euiLink euiLink--primary"
                  data-test-subj="emptyDashboardAddPanelButton"
                  onClick={[MockFunction]}
                  type="button"
                >
                  Add
                </button>
              </EuiLink>
               button in the menu bar above to add a visualization to the dashboard.
            </span>
          </EuiI18n>
        </p>
        <p
          className="linkToVisualizeParagraph"
        >
          <FormattedMessage
            defaultMessage="If you haven't set up any visualizations yet, {visualizeAppLink} to create your first visualization"
            id="kbn.dashboard.addVisualizationDescription3'"
            values={
              Object {
                "visualizeAppLink": <a
                  className="euiLink"
                  href="#/visualize"
                >
                  visit the Visualize app
                </a>,
              }
            }
          >
            If you haven't set up any visualizations yet, 
            <a
              className="euiLink"
              href="#/visualize"
            >
              visit the Visualize app
            </a>
             to create your first visualization
          </FormattedMessage>
        </p>
      </PseudoLocaleWrapper>
    </IntlProvider>
  </I18nProvider>
</DashboardEmptyScreen>
`;

exports[`DashboardEmptyScreen renders correctly without visualize paragraph 1`] = `
<DashboardEmptyScreen
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  onLinkClick={[MockFunction]}
  showLinkToVisualize={false}
>
  <I18nProvider>
    <IntlProvider
      defaultLocale="en"
      formats={
        Object {
          "date": Object {
            "full": Object {
              "day": "numeric",
              "month": "long",
              "weekday": "long",
              "year": "numeric",
            },
            "long": Object {
              "day": "numeric",
              "month": "long",
              "year": "numeric",
            },
            "medium": Object {
              "day": "numeric",
              "month": "short",
              "year": "numeric",
            },
            "short": Object {
              "day": "numeric",
              "month": "numeric",
              "year": "2-digit",
            },
          },
          "number": Object {
            "currency": Object {
              "style": "currency",
            },
            "percent": Object {
              "style": "percent",
            },
          },
          "relative": Object {
            "days": Object {
              "units": "day",
            },
            "hours": Object {
              "units": "hour",
            },
            "minutes": Object {
              "units": "minute",
            },
            "months": Object {
              "units": "month",
            },
            "seconds": Object {
              "units": "second",
            },
            "years": Object {
              "units": "year",
            },
          },
          "time": Object {
            "full": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
              "timeZoneName": "short",
            },
            "long": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
              "timeZoneName": "short",
            },
            "medium": Object {
              "hour": "numeric",
              "minute": "numeric",
              "second": "numeric",
            },
            "short": Object {
              "hour": "numeric",
              "minute": "numeric",
            },
          },
        }
      }
      locale="en"
      messages={Object {}}
      textComponent={Symbol(react.fragment)}
    >
      <PseudoLocaleWrapper>
        <EuiIcon
          color="subdued"
          size="xxl"
          type="dashboardApp"
        >
          <EuiIconEmpty
            className="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon--app euiIcon-isLoading"
            focusable="false"
            style={null}
          >
            <svg
              className="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon--app euiIcon-isLoading"
              focusable="false"
              height={16}
              style={null}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            />
          </EuiIconEmpty>
        </EuiIcon>
        <h2>
          This dashboard is empty. Let’s fill it up!
        </h2>
        <p>
          <EuiI18n
            defaults={
              Array [
                "Click the ",
                " button in the menu bar above to start working on your new dashboard.",
                "Edit",
                "Edit dashboard",
              ]
            }
            tokens={
              Array [
                "kbn.dashboard.howToStartWorkingOnNewDashboardDescription1",
                "kbn.dashboard.howToStartWorkingOnNewDashboardDescription2",
                "kbn.dashboard.howToStartWorkingOnNewDashboardEditLinkText",
                "kbn.dashboard.howToStartWorkingOnNewDashboardEditLinkAriaLabel",
              ]
            }
          >
            <span>
              Click the 
              <EuiLink
                aria-label="Edit dashboard"
                onClick={[MockFunction]}
              >
                <button
                  aria-label="Edit dashboard"
                  className="euiLink euiLink--primary"
                  onClick={[MockFunction]}
                  type="button"
                >
                  Edit
                </button>
              </EuiLink>
               button in the menu bar above to start working on your new dashboard.
            </span>
          </EuiI18n>
        </p>
      </PseudoLocaleWrapper>
    </IntlProvider>
  </I18nProvider>
</DashboardEmptyScreen>
`;
